assets/scss/main.scss
@import "variables";
body {
    width: 100%;
    height: 100%;
    background: #fff;
    color: $color-dark;
    font-family: 'Montserrat', sans-serif;
    overflow-x: hidden;
}

body a {
    color: $color-dark;
    &:hover {
        color: $color-purple;
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Montserrat', serif;
    font-weight: 700;
}

h1 {
    font-size: 1.8rem;
    margin: auto;
    text-align: center;
}

h2 {
    font-size: 2.5rem;
}

h3 {
    font-size: 1.3rem;
}

i {
    font-style: italic;
}

#about,
#contact,
#donations {
    padding-top: 80px;
    padding-bottom: 80px;
    border-bottom: 1px solid rgba(211, 211, 211, 0.3);
    border-top: 1px solid rgba(211, 211, 211, 0.3);
    @media all and (max-width: 768px) {
        padding-top: 70px;
        padding-bottom: 70px;
    }
}

.bg-grey {
    background: rgba(244, 244, 244, 0.3);
}

.section-heading {
    margin-top: 40px;
    margin-bottom: 40px;
    h2 {
        .initial {
            width: 0.9em;
            height: 0.9em;
            padding: 0 .1em;
        }
    }
    @media all and (max-width:768px) {
        margin-top: 40px;
    }
}

.social-links {
    margin: auto;
    text-align: left;
    li {
        display: inline-block;
        margin: 20px 40px;
        font-size: 1.25em;
        a {
            color: $color-dark;
            &:hover {
                color: $color-purple;
            }
        }
    }
}

.social-links-fixed {
    bottom: 5%;
    right: 0;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    box-shadow: 1px 1px 5px 1px rgba(0, 15, 27, 0.07);
    padding: 10px;
    background: #FFF;
    ul {
        margin-bottom: 0;
        li {
            font-size: 1.25em;
            a:hover {
                color: $color-purple;
            }
        }
    }
}

.btn {
    border-radius: 0;
    padding: .5rem 2.75rem;
    background: $color-dark;
    color: #FFF;
}
/* ... */

